--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,18 @@
   }
   }
 
+  @media (max-width: 465px) {
+    #nav-logo {
+      width: 12%;
+      margin-top: 1em;
+      margin-left: 1em;
+    }
+
+   button#test.navbar-toggler.collapsed {
+    margin-left: -4em;
+   }
+    }
+
 .navbar {
   display: flex;
   width: 100%;
@@ -248,7 +260,11 @@ span.navbar-toggler-icon:hover {
   align-self: center;
   background-color: #3F37C9;
   color: #fff;
+  font-weight: 700;
+ 
 }
+
+
 
 /* End of Main Page */
 
@@ -301,6 +317,7 @@ span.navbar-toggler-icon:hover {
 .products {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
   width: 100%;
   margin-bottom: 2em;
@@ -309,7 +326,7 @@ span.navbar-toggler-icon:hover {
 .product-card {
  width: 288px;
  height: 395px;
- margin: 2em;
+ margin: 1em;
  text-align: center;
  border-radius: .5em;
  box-shadow: 0 4px 6px 0 rgba(0,0,0,.2);
@@ -484,3 +501,196 @@ span.navbar-toggler-icon:hover {
 }
 
 /* End of Footer Section */
+
+
+
+
+/* BEGINNING OF CODE FOR PAGES */
+
+
+/* Shop Page */
+
+.filter-container {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: auto;
+  border-top: 1px solid #4895EF;
+  border-bottom: 1px solid #4895EF;
+  padding: .3em;
+}
+
+.filter-container h3 {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.page-title {
+  width: 100%;
+  margin-top: 7em;
+  margin-bottom: 5em;
+}
+
+.page-title h1 {
+  text-align: center;
+  font-size: 65px;
+  font-weight: 700;
+}
+
+.categories {
+  width: 25%;
+  align-items: flex-end;
+  margin-left: 10em;
+}
+
+.sort-by {
+  width: 25%;
+  margin-left: 40em;
+}
+
+
+
+@media (max-width: 1050px) {
+  .sort-by {
+    width: 25%;
+    margin-left: 5em;
+  }
+
+  .categories {
+    width: 25%;
+    align-items: flex-end;
+    margin-left: 7em;
+  }
+ 
+  }
+
+.banner {
+  width: 100%;
+  height: 7em;
+  background-color: #4CC9F0;
+  margin-top: 5em;
+  text-align: center;
+  padding-top: 1em;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+}
+
+.banner h1 {
+  font-size: 65px;
+  color: #fff;
+  font-weight: 700;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: auto;
+  margin-top: -4em;
+}
+
+#shop-button {
+  width: 15em;
+  border-radius: 4em;
+  margin-top: 3em;
+  padding: 1em;
+  align-self: center;
+  background-color: #3F37C9;
+  color: #fff;
+}
+
+
+/* End Shop Page */
+
+
+/* Call to Action - Shop Page */
+
+
+.cta-two {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: auto;
+  background-color: #4CC9F0;
+  margin-bottom:4em;
+}
+
+@media (max-width: 700px) {
+  
+.cta-two {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: auto;
+  background-color: #4CC9F0;
+  margin-bottom:4em;
+  padding: 1em;
+}
+.cta-two h1 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 50px;
+  font-weight: 700;
+  color: #fff;
+  margin-bottom: .5em;
+
+}
+
+.cta-image {
+ display: none;
+
+}
+.cta-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 45%;
+  margin: 1em;
+  text-align: center;
+
+
+}
+}
+
+
+.cta-image {
+  width: 45%;
+  margin: 1em;
+}
+
+.cta-text {
+  width: 45%;
+  margin: 1em;
+  text-align: center;
+
+
+}
+
+.cta-two h1 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 70px;
+  font-weight: 700;
+  color: #fff;
+  margin-bottom: .5em;
+
+}
+
+.cta-two button {
+width: 11em;
+border: 2px solid #fff;
+background-color: #4CC9F0;
+border-radius: 3em;
+color: #fff;
+font-size: 24px;
+font-weight: 500;
+
+
+}
+
+/* Call to Action - Shop Page */
+
+
+
+/* END OF CODE FOR PAGES */
