--- a/src/App.css
+++ b/src/App.css
@@ -689,8 +689,104 @@ font-weight: 500;
 
 }
 
-/* Call to Action - Shop Page */
+/* End of Call to Action - Shop Page */
 
 
+
+/* Call to Action - Dog Food Page */
+
+
+.cta-three {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: auto;
+  background-color: #3F37C9;
+  margin-bottom:4em;
+}
+
+@media (max-width: 700px) {
+  
+.cta-three {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: auto;
+  background-color: #3F37C9;
+  margin-bottom:4em;
+  padding: 1em;
+}
+.cta-three h1 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 50px;
+  font-weight: 700;
+  color: #fff;
+  margin-bottom: .5em;
+
+}
+
+.cta-image {
+ display: none;
+
+}
+.cta-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 45%;
+  margin: 1em;
+  text-align: center;
+
+
+}
+}
+
+
+.cta-image {
+  width: 45%;
+  margin: 1em;
+}
+
+.cta-text {
+  width: 45%;
+  margin: 1em;
+  text-align: center;
+
+
+}
+
+.cta-three h1 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 70px;
+  font-weight: 700;
+  color: #fff;
+  margin-bottom: .5em;
+
+}
+
+.cta-three button {
+width: 11em;
+border: 2px solid #fff;
+background-color: #3F37C9;
+border-radius: 3em;
+color: #fff;
+font-size: 24px;
+font-weight: 500;
+
+
+}
+
+/* End of Call to Action - Dog Food Page */
+
+/* Dog Food Page Shop Page */
+
+
+
+
+/* End of Dog Food Page Shop Page */
 
 /* END OF CODE FOR PAGES */
