--- a/src/App.css
+++ b/src/App.css
@@ -172,79 +172,36 @@ span.navbar-toggler-icon:hover {
   border-bottom: 1px solid #4895EF;
 }
 
-
-@media (max-width: 1050px) {
-  .main {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-   align-items: center;
-   
-  }
-
-  .main-image {
-    width: 90%;
-    margin-bottom: 2em;
-   
-  }
-
-  .main-content {
-    width: 100%;
-    margin-bottom: 2em;
-    margin-left: 2em;
-    text-align: center;
-   
-  }
-
-  .main-content h1 {
-    font-size: 65px;
-    text-align: center;
-  }
-  
-  }
-
-
 .main-content {
   justify-content: center;
-  width: 60%;
+  width: 50%;
   text-align: center;
   margin-right: 5em;
   margin-bottom: 2em;
 }
 
 .main-image {
-  width: 60%;
+  width: 50%;
   margin-bottom: 2em;
   margin-left: 5em;
   margin-right: 2em;
 }
 
 .main-content h1 {
-  font-size: 90px;
+  font-size: 65px;
   text-align: center;
 }
-
-
-@media (max-width: 1050px) {
-  .main-content h1 {
-    font-size: 60px;
-    text-align: center;
-    margin-left: 1em;
-  }
 
 
 #main-button {
   width: 15em;
   border-radius: 4em;
   margin-top: 3em;
-  margin-left: 3.5em;
   padding: 1em;
   align-self: center;
   background-color: #3F37C9;
   color: #fff;
 }
-  }
-
 
 #main-image {
   width: 85%;
@@ -262,6 +219,38 @@ span.navbar-toggler-icon:hover {
   font-weight: 700;
  
 }
+
+
+ /* Media Queries */
+
+ @media (max-width: 1050px) {
+  .main { 
+    flex-wrap: wrap;
+  }
+
+  .main-content {
+    width: 100%;
+    margin-right: 0em;
+    margin-bottom: 2em;
+  }
+
+  .main-content h1 {
+    font-size: 45px;
+  }
+
+  .main-image {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-left: 0em;
+    margin-right: 0em;
+  }
+
+}
+  
+
+
+  /* End of Media Queries */
 
 
 
@@ -394,6 +383,29 @@ span.navbar-toggler-icon:hover {
   
  
 }
+
+/* Media Queries */
+
+@media (max-width: 500px) {
+  .cta-one h1 {
+    font-size: 45px;
+  }
+
+  .cta-one button {
+    width: 10em;
+    border: 2px solid #fff;
+    background-color: #4CC9F0;
+    border-radius: 3em;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 500;
+    
+   
+  }
+
+}
+
+
 /* End Call-To-Action Homepage */
 
 
@@ -1231,6 +1243,51 @@ text-align: center;
 }
 
 /* End of Schedule Page */
+
+
+
+/* Checkout Page */
+
+.checkout-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+  height: 400px;
+  border-top: #3F37C9 1px solid;
+  border-bottom: #3F37C9 1px solid;
+  margin-top: 1.5em;
+}
+
+.customer-info {
+  width: 80%;
+  height: auto;
+  margin: 2em;
+  text-align: left;
+}
+
+#form {
+  width: 18em;
+  margin: 1em;
+  border: 1px #E0E0E0 solid;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+}
+
+#form-label {
+  width: 10em;
+  font-weight: 700;
+}
+
+form {
+  align-items: center;
+  padding-left: 15em;
+}
+
+
+
+
+
+/* End of Checkout Page */
 
 
 
