--- a/src/App.css
+++ b/src/App.css
@@ -261,6 +261,8 @@ span.navbar-toggler-icon:hover {
 /* Product Section */
 
 .product-container {
+  display: flex;
+  flex-wrap: wrap;
   width: 100%;
   height: auto;
   margin-top: 4em;
@@ -271,8 +273,6 @@ span.navbar-toggler-icon:hover {
 @media (max-width: 1050px) {
   .products {
     display: flex;
-    flex-wrap: nowrap;
-    flex-direction: column;
     width: 100%;
     margin-bottom: 2em;
   }
@@ -288,8 +288,6 @@ span.navbar-toggler-icon:hover {
   @media (max-width: 1150px) {
     .products {
       display: flex;
-      flex-wrap: nowrap;
-      flex-direction: column;
       width: 100%;
       margin-bottom: 2em;
     }
@@ -426,6 +424,11 @@ span.navbar-toggler-icon:hover {
 }
 
 @media (max-width: 1150px) {
+
+  .review-container{
+    margin-top: 0em;
+  }
+
   .box-container {
     display: flex;
     align-items: center;
@@ -438,11 +441,12 @@ span.navbar-toggler-icon:hover {
   width:15em;
   height: auto;
   border: 2px solid #3F37C9;
-  margin: 4em;
+  margin: 0em;
   box-shadow: 0 4px 6px 0 rgba(0,0,0,.2);
   text-align: center;
   align-items: center;
 }
+
   }
 
 
@@ -450,7 +454,7 @@ span.navbar-toggler-icon:hover {
   width:15em;
   height: auto;
   border: 2px solid #3F37C9;
-  margin: 4em;
+  margin: 2em;
   box-shadow: 0 4px 6px 0 rgba(0,0,0,.2);
   text-align: center;
 }
@@ -804,6 +808,7 @@ font-weight: 500;
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
     height: auto;
     border-bottom: #3F37C9 1px solid;
     margin-top: 4em;
@@ -814,10 +819,14 @@ font-weight: 500;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 40%;
+    width: 100%;
     height: auto;
     margin-bottom: 2em;
   }
+
+    .product-description {
+      width: 100%;
+    }
 
   }
 
@@ -842,12 +851,12 @@ font-weight: 500;
 }
 
 #example {
-  width: 70%;
+  width: 80%;
   
 }
 
 .product-description {
-  width: 60%;
+  width: 40%;
   height: auto;
   text-align: center;
 }
@@ -1073,10 +1082,22 @@ text-align: center;
 
 .cart-item {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   width: 70%;
   height: auto;
   margin: 1em;
+}
+
+.checkbox {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+#checkbox-label {
+  font-weight: 700;
+  margin-top: 1em;
 }
 
 .item-image {
@@ -1086,6 +1107,9 @@ text-align: center;
 }
 
 .item-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 50%;
   height: auto;
   text-align: center;
@@ -1131,6 +1155,39 @@ text-align: center;
 
 .total-section h1 {
   margin: 1em;
+}
+
+
+@media (max-width: 700px) {
+  .cart-item {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    width: 70%;
+    height: auto;
+    margin: 1em;
+  }
+
+  .item-image {
+    display: flex;
+    justify-content: center;
+    width: 75%;
+    height: auto;
+    margin-top: 1em;
+  }
+
+  #item-image {
+    width: 100%;
+    margin: 0em;
+    border: #4CC9F0 2px solid;
+    padding: 2em;
+  
+  }
+
+  .item-info {
+    width: 100%;
+  }
 }
 /* End of Cart Page */
 
@@ -1250,24 +1307,42 @@ text-align: center;
 
 .checkout-container {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   justify-content: center;
   width: 100%;
-  height: 400px;
+  height: auto;
   border-top: #3F37C9 1px solid;
-  border-bottom: #3F37C9 1px solid;
+
   margin-top: 1.5em;
 }
 
 .customer-info {
-  width: 80%;
+  display: flex;
+  justify-content: center;
+  width: 100%;
   height: auto;
-  margin: 2em;
-  text-align: left;
+  border-bottom: #3F37C9 1px solid;
+  margin-top: 2em;
+  margin-bottom: 1em;
 }
 
+.payment-info {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: auto;
+  margin-top: 2em;
+}
+
+
 #form {
-  width: 18em;
+  width: 14em;
+  margin: 1em;
+  border: 1px #E0E0E0 solid;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+}
+#form2 {
+  width: 8em;
   margin: 1em;
   border: 1px #E0E0E0 solid;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
@@ -1276,16 +1351,94 @@ text-align: center;
 #form-label {
   width: 10em;
   font-weight: 700;
-}
-
-form {
-  align-items: center;
-  padding-left: 15em;
+  text-align: left;
+  margin: 1.1em 1em;
 }
 
 
+.checkout-container h4 {
+  font-weight: 700;
+  text-align: center;
+  margin-top: 2em;
+}
 
 
+.inputs {
+  width: 30%;
+  height: auto;
+  text-align: left;
+  margin-bottom: 2em;
+}
+
+.labels {
+  width: 20%;
+  height: auto;
+}
+
+.confirm-button {
+  width: 100%;
+  height: auto;
+  text-align: center;
+  margin-bottom: 3em;
+  margin-top: 2em;
+}
+
+#confirm-button {
+  width: 15em;
+  border-radius: 4em;
+  padding: 1em;
+  background-color: #3F37C9;
+  color: #fff;
+  font-weight: 700;
+  font-size: 18px;
+}
+
+.checkout-checkboxes {
+  width: 100%;
+  height: auto;
+  margin-top: 2em;
+}
+
+#check {
+  width: 2em;
+}
+
+@media (max-width: 700px) {
+  .inputs {
+    width: 50%;
+    height: auto;
+    text-align: left;
+    margin-bottom: 2em;
+  }
+  
+  .labels {
+    width: 35%;
+    height: auto;
+  }
+
+  #form {
+    width: 10em;
+    margin-bottom: 1em;
+    border: 1px #E0E0E0 solid;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+  }
+  #form2 {
+    width: 6em;
+    margin-bottom: 1em;
+    border: 1px #E0E0E0 solid;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+  }
+
+  #confirm-button {
+    width: 13em;
+    border-radius: 4em;
+    padding: 1em;
+    background-color: #3F37C9;
+    color: #fff;
+    font-weight: 700;
+    font-size: 18px;
+  }
+}
 
 /* End of Checkout Page */
 
