--- a/src/App.css
+++ b/src/App.css
@@ -1316,7 +1316,7 @@ text-align: center;
   margin-top: 1.5em;
 }
 
-.customer-info {
+.customer-information {
   display: flex;
   justify-content: center;
   width: 100%;
